<resources>
    <string name="app_name">SenseMe</string>
    <string name="action_settings">Settings</string>
    <string name="default_label">No Readings Yet</string>
    <string name="default_x">X</string>
    <string name="default_y">Y</string>
    <string name="default_z">Z</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn">Stop</string>
    <string name="title_sensor1">Accelerometer Reading</string>
</resources>